--- a/css/styles.css
+++ b/css/styles.css
@@ -69,30 +69,15 @@ nav ul li:hover {
 /* Estilos del contenedor de la página principal */
 
 .contenedor-principal {
-  margin: 0;
+  line-height: 1.5rem;
+  margin: 0 auto;
   text-align: center;
+  width: 80%;
 }
 
 .sub-cont-ppal {
-  margin: 0;
-  height: 250px;
-  width: 50%;
-}
-
-.somos {
-  float: left;
-}
-
-.cree {
-  display: inline-block;
-}
-
-.horarios {
-  float: left;
-}
-
-.ubicacion {
-  display: inline-block;
+  margin: 30px auto;
+  width: 40%;
 }
 
 .ubicacion iframe {
@@ -103,10 +88,6 @@ nav ul li:hover {
 /* Fin estilos del contenedor de la página principal */
 
 /* Estilos del pié de página */
-
-footer {
-  clear: both;
-}
 
 footer p {
   margin: 0;
@@ -233,7 +214,7 @@ blockquote p {
 
   /* Menú */
   nav {
-    height: 160px;
+    height: 200px;
   }
 
   nav ul li {
@@ -249,10 +230,6 @@ blockquote p {
   .sub-cont-ppal {
     height: auto;
     width: 100%;
-  }
-
-  .somos, .horarios {
-    float: none;
   }
 
   #tabla {
