--- a/css/styles-preguntas.css
+++ b/css/styles-preguntas.css
@@ -61,6 +61,10 @@ table {
   line-height: 2em;
 }
 
+.imagen {
+  width: 30%;
+}
+
 /* Estilos de las preguntas */
 
 blockquote {
@@ -109,6 +113,10 @@ blockquote p {
 
   #logo {
     float: none;
+  }
+
+  .imagen {
+    width: 80%;
   }
 
   .video-del-predicador iframe {
