Actualización de la página principal y la página de estudios. Agregado del estudio 5 de la depresión y el enojo.

--- a/css/styles-preguntas.css
+++ b/css/styles-preguntas.css
@@ -92,6 +92,10 @@ blockquote p {
   display: inline-block;
 }
 
+.orador h2, p {
+  display: inline-block;
+}
+
 .orador a {
   color: gray;
   text-decoration: none;
